<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentDistancia">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/unidades_de_distancia_personales"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUnidadDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/unidad_nombre"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
                <EditText
                    android:id="@+id/unidadDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="@+id/textViewUnidadDist"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/textViewUdsDis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/unidad_medici_n"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUnidadDist" /> />
                <EditText
                    android:id="@+id/unidadesDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="@+id/textViewUdsDis"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/textViewValorDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/valor_vertical_metros"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUdsDis" />


                <EditText
                    android:id="@+id/valorDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="@+id/textViewValorDist"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textViewUrlIcoDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/url_icono"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewValorDist" />

        <EditText
            android:id="@+id/UrlIcoDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/textViewUrlIcoDist"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
                    android:id="@+id/textViewUrlImageDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="URL Imagen"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUrlIcoDist" />


        <EditText
            android:id="@+id/UrlImageDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/textViewUrlImageDist"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFragmentDistancia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDis" />

        <Button
            android:id="@+id/buttonDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UrlImageDist" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="144dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>